_sass/components/workshops.scss
.workshop {
  $b: &;

  color: map-get($colors, dark);
  background: map-get($colors, light);
  padding: 1rem;
  margin-bottom: 4rem;

  &.gradient-box {
    position: relative;
    box-sizing: border-box;
  
    $border: 5px;
    background-clip: padding-box; /* !importanté */
    border: solid $border transparent; /* !importanté */
    border-radius: 0.5em;
  
    &:before {
      content: '';
      position: absolute;
      top: 0; right: 0; bottom: 0; left: 0;
      z-index: -1;
      margin: -$border; /* !importanté */
      border-radius: inherit; /* !importanté */
      background: linear-gradient(to right, map-get($colors, primary), map-get($colors, secondary));
    }
  }

  &__logo-container {
    text-align: center;
    padding: 25px;
  }

  &__logo {
    width: 100px;
    height: 100px;
  }

  &__title {
    margin: 0;
    text-align: center;
  }

  &__description {
    margin: 0;
  }

  &__details {
    align-items: flex-end;
    justify-content: space-between;
  }

  &__trainer {
    display: flex;
    align-items: center;
    text-align: center;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;

    .angular-image {
      width: 100px;
      height: 100px;
    }

    .angular-image__badge {
      font-size: 0.8rem;
      padding: .15rem .8rem;
    }

  }

  @media screen and (max-width: $screen-xsmall) {
    &__details {
      flex-direction: column;
      align-items: center;
    }

    &__trainer {
      margin: 25px 0;
    }
  }
}

.order {

  display: flex;
  flex-direction: column;
  align-items: center;

  &__price {
    font-size: 1rem;
    order: 1;
  }

  &__button {
    margin-bottom: 0;
    order: 0;
  }
}

